ESLint config updated

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "plugins": [
         "babel",
         "react",
+        "react-hooks",
         "@typescript-eslint"
     ],
     "settings": {
@@ -41,6 +42,8 @@
         "react/jsx-curly-spacing": 2,
         "react/jsx-no-undef": 2,
         "react/jsx-uses-react": 2,
-        "react/jsx-uses-vars": 2
+        "react/jsx-uses-vars": 2,
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
