Reworked to a pomodoro timer

--- a/package.json
+++ b/package.json
@@ -1,68 +1,71 @@
 {
-  "private": true,
-  "name": "wasmer",
-  "version": "0.0.2",
-  "license": "MIT",
-  "repository": "Abbit/wasmer",
-  "author": {
-    "name": "Mikhail Kopylov",
-    "email": "kopylovmichaelfl@gmail.com",
-    "url": "https://github.com/Abbit"
-  },
-  "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "serve": "sirv dist -s -m 31536000 -i",
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "lint": "eslint src --ext .js,.ts,.tsx"
-  },
-  "browserslist": [
-    "last 10 version",
-    "> 1%",
-    "maintained node versions",
-    "not dead"
-  ],
-  "dependencies": {
-    "preact": "^10.0.0-rc.3"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-react-jsx": "^6.22.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "sass-loader": "^8.0.0",
-    "sirv-cli": "^0.4.4",
-    "style-loader": "^1.0.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2",
-    "workbox-core": "^5.0.0-beta.1",
-    "workbox-precaching": "^5.0.0-beta.1",
-    "workbox-webpack-plugin": "^5.0.0-beta.1"
-  }
+	"private": true,
+	"name": "pomidor",
+	"version": "0.0.2",
+	"license": "MIT",
+	"repository": "Abbit/pomidor",
+	"author": {
+		"name": "Mikhail Kopylov",
+		"email": "kopylovmichaelfl@gmail.com",
+		"url": "https://github.com/Abbit"
+	},
+	"scripts": {
+		"build": "webpack --config webpack.prod.js",
+		"serve": "sirv dist -s -m 31536000 -i",
+		"dev": "webpack-dev-server --open --config webpack.dev.js",
+		"lint": "eslint src --ext .js,.ts,.tsx"
+	},
+	"browserslist": [
+		"last 10 version",
+		"> 1%",
+		"maintained node versions",
+		"not dead"
+	],
+	"dependencies": {
+		"goober": "^1.8.0",
+		"preact": "^10.4.1",
+		"preact-robot": "^0.2.2",
+		"robot3": "^0.2.17"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.8.4",
+		"@babel/core": "^7.9.6",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-numeric-separator": "^7.8.3",
+		"@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+		"@babel/preset-env": "^7.9.6",
+		"@babel/preset-react": "^7.9.4",
+		"@babel/preset-typescript": "^7.9.0",
+		"@typescript-eslint/eslint-plugin": "^2.31.0",
+		"@typescript-eslint/parser": "^2.31.0",
+		"autoprefixer": "^9.7.6",
+		"babel-loader": "^8.1.0",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^5.1.1",
+		"css-loader": "^3.5.3",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-config-typescript": "^3.0.0",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^4.0.0",
+		"html-webpack-plugin": "^4.3.0",
+		"node-sass": "^4.14.1",
+		"postcss-loader": "^3.0.0",
+		"prettier": "^2.0.5",
+		"sass-loader": "^8.0.2",
+		"sirv-cli": "^0.4.5",
+		"style-loader": "^1.2.1",
+		"typescript": "^3.8.3",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
+		"webpack-merge": "^4.2.2",
+		"workbox-core": "^5.1.3",
+		"workbox-precaching": "^5.1.3",
+		"workbox-webpack-plugin": "^5.1.3"
+	}
 }
