--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"not dead"
 	],
 	"dependencies": {
+		"firebase": "^7.14.3",
 		"goober": "^1.8.0",
 		"preact": "^10.4.1",
 		"preact-robot": "^0.2.2",
