rename to "pomidorka"

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
-	"name": "pomidor",
-	"version": "0.0.2",
+	"name": "pomidorka",
+	"version": "0.0.8",
 	"license": "MIT",
 	"repository": "Abbit/pomidor",
 	"author": {
