--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
 		"react/jsx-no-undef": 2,
 		"react/jsx-uses-react": 2,
 		"react/jsx-uses-vars": 2,
+		"react/prop-types": "off",
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
 		"import/prefer-default-export": 0,
