--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"not dead"
 	],
 	"dependencies": {
+		"@preact-hooks/unistore": "^1.1.2",
 		"firebase": "^7.14.3",
 		"goober": "^1.8.0",
 		"preact": "^10.4.1",
 		"preact-robot": "^0.2.2",
-		"robot3": "^0.2.17"
+		"robot3": "^0.2.17",
+		"unistore": "^3.5.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
@@ -60,6 +62,7 @@
 		"sass-loader": "^8.0.2",
 		"sirv-cli": "^0.4.5",
 		"style-loader": "^1.2.1",
+		"svg-url-loader": "^5.0.0",
 		"typescript": "^3.8.3",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
