--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"svg-url-loader": "^5.0.0",
 		"typescript": "^3.8.3",
 		"webpack": "^4.43.0",
+		"webpack-bundle-analyzer": "^3.7.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.10.3",
 		"webpack-merge": "^4.2.2",
