--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"not dead"
 	],
 	"dependencies": {
+		"@babel/runtime": "^7.11.2",
 		"@preact-hooks/unistore": "^1.1.2",
 		"firebase": "^7.19.1",
 		"goober": "^2.0.5",
@@ -35,13 +36,14 @@
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
 		"@babel/plugin-proposal-numeric-separator": "^7.10.4",
 		"@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+		"@babel/plugin-transform-react-jsx": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.11.5",
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
 		"@babel/preset-typescript": "^7.10.4",
 		"@typescript-eslint/eslint-plugin": "^4.1.0",
 		"@typescript-eslint/parser": "^4.1.0",
 		"babel-loader": "^8.1.0",
-		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.1.0",
 		"eslint": "^7.8.1",
@@ -60,9 +62,9 @@
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.1.3",
-		"workbox-core": "^5.1.3",
-		"workbox-precaching": "^5.1.3",
-		"workbox-webpack-plugin": "^5.1.3"
+		"webpack-merge": "^5.1.4",
+		"workbox-core": "^5.1.4",
+		"workbox-precaching": "^5.1.4",
+		"workbox-webpack-plugin": "^5.1.4"
 	}
 }
