--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"private": true,
 	"name": "pomidorka",
+	"private": true,
 	"version": "0.1.1",
+	"type": "module",
 	"license": "MIT",
 	"repository": "Abbit/pomidorka",
 	"author": {
@@ -10,61 +11,39 @@
 		"url": "https://github.com/Abbit"
 	},
 	"scripts": {
-		"build": "webpack --config webpack.prod.js",
-		"dev": "webpack-dev-server --open --config webpack.dev.js",
-		"lint": "eslint src --ext .ts,.tsx",
-		"deploy": "npm run build"
+		"dev": "vite",
+		"build": "npm run lint:typecheck && vite build",
+		"preview": "vite preview",
+		"lint:typecheck": "tsc",
+		"lint:fix": "eslint src --ext .ts,.tsx --fix --ignore-path .gitignore",
+		"lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
+		"lint": "npm run lint:format && npm run lint:typecheck && npm run lint:fix"
 	},
-	"browserslist": [
-		"last 10 version",
-		"> 1%",
-		"maintained node versions",
-		"not dead"
-	],
 	"dependencies": {
-		"@babel/runtime": "^7.11.2",
 		"@preact-hooks/unistore": "^1.1.2",
-		"goober": "^2.0.5",
-		"preact": "^10.4.8",
+		"goober": "^2.1.10",
+		"preact": "^10.10.0",
 		"preact-robot": "^0.2.3",
-		"robot3": "^0.2.18",
+		"robot3": "^0.2.3",
 		"unistore": "^3.5.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.11.6",
-		"@babel/core": "^7.11.6",
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@babel/plugin-proposal-numeric-separator": "^7.10.4",
-		"@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-		"@babel/plugin-transform-react-jsx": "^7.10.4",
-		"@babel/plugin-transform-runtime": "^7.11.5",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/preset-react": "^7.10.4",
-		"@babel/preset-typescript": "^7.10.4",
-		"@typescript-eslint/eslint-plugin": "^4.1.0",
-		"@typescript-eslint/parser": "^4.1.0",
-		"babel-loader": "^8.1.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"copy-webpack-plugin": "^6.1.0",
-		"eslint": "^7.8.1",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-config-typescript": "^3.0.0",
-		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-jsx-a11y": "^6.3.1",
-		"eslint-plugin-prettier": "^3.1.4",
-		"eslint-plugin-react": "^7.20.6",
-		"eslint-plugin-react-hooks": "^4.1.0",
-		"html-webpack-plugin": "^4.4.1",
-		"prettier": "^2.1.1",
-		"svg-url-loader": "^6.0.0",
-		"typescript": "^4.0.2",
-		"webpack": "^4.44.1",
-		"webpack-bundle-analyzer": "^3.8.0",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.1.4",
-		"workbox-core": "^5.1.4",
-		"workbox-precaching": "^5.1.4",
-		"workbox-webpack-plugin": "^5.1.4"
+		"@preact/preset-vite": "^2.3.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
+		"eslint": "^8.20.0",
+		"eslint-config-preact": "^1.3.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"prettier": "^2.7.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.2",
+		"vite-plugin-pwa": "^0.12.3",
+		"workbox-core": "^6.5.3",
+		"workbox-precaching": "^6.5.3",
+		"workbox-routing": "^6.5.3",
+		"workbox-window": "^6.5.3"
 	}
 }
